--- a/public/css/app.css
+++ b/public/css/app.css
@@ -997,6 +997,9 @@ input#checkboxLabelFive:checked ~ .box{
 .col-span-12{
   grid-column: span 12 / span 12;
 }
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
 .col-span-3{
   grid-column: span 3 / span 3;
 }
@@ -1030,6 +1033,10 @@ input#checkboxLabelFive:checked ~ .box{
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
+}
+.-mx-6{
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
 }
 .mx-4{
   margin-left: 1rem;
@@ -1126,6 +1133,21 @@ input#checkboxLabelFive:checked ~ .box{
 .mr-4{
   margin-right: 1rem;
 }
+.mr-6{
+  margin-right: 1.5rem;
+}
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+.mr-1{
+  margin-right: 0.25rem;
+}
+.-mt-8{
+  margin-top: -2rem;
+}
+.mt-20{
+  margin-top: 5rem;
+}
 .mt-0\.5{
   margin-top: 0.125rem;
 }
@@ -1147,20 +1169,20 @@ input#checkboxLabelFive:checked ~ .box{
 .-ml-1{
   margin-left: -0.25rem;
 }
-.mr-1{
-  margin-right: 0.25rem;
-}
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 .ml-14{
   margin-left: 3.5rem;
 }
 .mb-11{
   margin-bottom: 2.75rem;
+}
+.mt-40{
+  margin-top: 10rem;
+}
+.-mb-4{
+  margin-bottom: -1rem;
 }
 .mr-52{
   margin-right: 13rem;
@@ -1171,8 +1193,14 @@ input#checkboxLabelFive:checked ~ .box{
 .mb-9{
   margin-bottom: 2.25rem;
 }
-.mt-20{
-  margin-top: 5rem;
+.ml-8{
+  margin-left: 2rem;
+}
+.-mt-6{
+  margin-top: -1.5rem;
+}
+.-mt-2{
+  margin-top: -0.5rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -1270,6 +1298,9 @@ input#checkboxLabelFive:checked ~ .box{
 .h-3{
   height: 0.75rem;
 }
+.max-h-56{
+  max-height: 14rem;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -1320,6 +1351,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .w-40{
   width: 10rem;
+}
+.w-36{
+  width: 9rem;
 }
 .w-56{
   width: 14rem;
@@ -1410,6 +1444,10 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.translate-y-1\/2{
+  --tw-translate-y: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .-rotate-90{
   --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1428,8 +1466,30 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.scale-y-90{
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-y-100{
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+@-webkit-keyframes spin{
+  to{
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin{
+  to{
+    transform: rotate(360deg);
+  }
+}
+.animate-spin{
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 .cursor-default{
   cursor: default;
@@ -1518,6 +1578,11 @@ input#checkboxLabelFive:checked ~ .box{
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
 .overflow-auto{
   overflow: auto;
 }
@@ -1553,6 +1618,9 @@ input#checkboxLabelFive:checked ~ .box{
 .rounded-full{
   border-radius: 9999px;
 }
+.rounded-xl{
+  border-radius: 0.75rem;
+}
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1568,6 +1636,10 @@ input#checkboxLabelFive:checked ~ .box{
 .rounded-b-none{
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 0px;
+}
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 .border{
   border-width: 1px;
@@ -1750,6 +1822,10 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-bg-opacity: 1;
   background-color: rgb(249 193 7 / var(--tw-bg-opacity));
 }
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 43 54 / var(--tw-bg-opacity));
+}
 .bg-blue-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
@@ -1793,6 +1869,9 @@ input#checkboxLabelFive:checked ~ .box{
 .bg-opacity-30{
   --tw-bg-opacity: 0.3;
 }
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
+}
 .bg-cover{
   background-size: cover;
 }
@@ -1805,6 +1884,9 @@ input#checkboxLabelFive:checked ~ .box{
 .fill-current{
   fill: currentColor;
 }
+.stroke-current{
+  stroke: currentColor;
+}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1815,14 +1897,17 @@ input#checkboxLabelFive:checked ~ .box{
 .p-6{
   padding: 1.5rem;
 }
+.p-8{
+  padding: 2rem;
+}
 .p-5{
   padding: 1.25rem;
 }
 .p-10{
   padding: 2.5rem;
 }
-.p-20{
-  padding: 5rem;
+.p-1{
+  padding: 0.25rem;
 }
 .p-4{
   padding: 1rem;
@@ -1942,8 +2027,17 @@ input#checkboxLabelFive:checked ~ .box{
 .pl-16{
   padding-left: 4rem;
 }
+.pl-4{
+  padding-left: 1rem;
+}
+.pr-9{
+  padding-right: 2.25rem;
+}
 .pt-8{
   padding-top: 2rem;
+}
+.pr-3{
+  padding-right: 0.75rem;
 }
 .pt-20{
   padding-top: 5rem;
@@ -2153,13 +2247,13 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-text-opacity: 1;
   color: rgb(157 84 37 / var(--tw-text-opacity));
 }
-.text-body-color{
-  --tw-text-opacity: 1;
-  color: rgb(99 115 129 / var(--tw-text-opacity));
-}
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-body-color{
+  --tw-text-opacity: 1;
+  color: rgb(99 115 129 / var(--tw-text-opacity));
 }
 .text-warning{
   --tw-text-opacity: 1;
@@ -2201,6 +2295,9 @@ input#checkboxLabelFive:checked ~ .box{
 .opacity-60{
   opacity: 0.6;
 }
+.opacity-25{
+  opacity: 0.25;
+}
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -2226,6 +2323,11 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-inner{
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .ring-1{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2242,6 +2344,10 @@ input#checkboxLabelFive:checked ~ .box{
 .ring-opacity-5{
   --tw-ring-opacity: 0.05;
 }
+.blur{
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -2257,6 +2363,18 @@ input#checkboxLabelFive:checked ~ .box{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-transform{
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-colors{
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .duration-150{
   transition-duration: 150ms;
 }
@@ -2268,6 +2386,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .duration-300{
   transition-duration: 300ms;
+}
+.duration-100{
+  transition-duration: 100ms;
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2330,6 +2451,11 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .hover\:w-12:hover{
   width: 3rem;
+}
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
@@ -2405,6 +2531,10 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.hover\:text-black:hover{
+  --tw-text-opacity: 1;
+  color: rgb(33 43 54 / var(--tw-text-opacity));
+}
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
   color: rgb(48 86 211 / var(--tw-text-opacity));
@@ -2446,6 +2576,10 @@ input#checkboxLabelFive:checked ~ .box{
 .focus\:border-gray-300:focus{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.focus\:border-blue-400:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
 .focus\:border-blue-500:focus{
   --tw-border-opacity: 1;
@@ -2631,6 +2765,10 @@ input#checkboxLabelFive:checked ~ .box{
     --tw-bg-opacity: 1;
     background-color: rgb(75 85 99 / var(--tw-bg-opacity));
   }
+  .dark\:hover\:text-gray-200:hover{
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
+  }
   .dark\:focus\:border-blue-500:focus{
     --tw-border-opacity: 1;
     border-color: rgb(59 130 246 / var(--tw-border-opacity));
@@ -2646,6 +2784,9 @@ input#checkboxLabelFive:checked ~ .box{
   }
   .sm\:col-span-6{
     grid-column: span 6 / span 6;
+  }
+  .sm\:m-4{
+    margin: 1rem;
   }
   .sm\:mx-0{
     margin-left: 0px;
@@ -2789,6 +2930,16 @@ input#checkboxLabelFive:checked ~ .box{
   }
   .sm\:justify-between{
     justify-content: space-between;
+  }
+  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+  .sm\:space-x-6 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
   .sm\:rounded-lg{
     border-radius: 0.5rem;
